# server.js
@@ -106,6 +106,7 @@ app.use('/api/v1/product',productApi)
 appAdmin.use('/admin/seller',sellerAdmin)
 app.use('/api/v1/seller',sellerApi)
 appAdmin.use('/admin/payment',payment)
+app.use('/api/v1/payment',payment)
 app.use('/api/v1/order',orderApi)
 appAdmin.use('/admin/order',orderAdmin)
 app.use('/api/v1/carousel',carouselApi)
